[package]
name = "kopitiam-tensor"
# Seeded at 0.0.1 as an early name reservation (mid-build), behind the workspace
# version on purpose. Depends on kopitiam-core, which is seeded the same way, so
# core must go up first. See scripts/publish-runtime-seed.sh.
version = "0.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Kopitiam Runtime: tensor (work in progress)."

[dependencies]
kopitiam-core.workspace = true
